--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "element-closest": "^3.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^5.15.0",
-    "eslint-plugin-shopify": "^29.0.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-shopify": "30.0.1",
     "faker": "^4.1.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.0",
