--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -30,7 +30,8 @@
     "@shopify/useful-types": "^1.3.0",
     "apollo-client": "^2.6.0",
     "graphql-typed": "^0.4.0",
-    "react-apollo": ">=2.2.3 <3.0.0"
+    "react-apollo": ">=2.2.3 <3.0.0",
+    "apollo-link-http": "^1.5.15"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.0",
