--- a/packages/react-self-serializers/package.json
+++ b/packages/react-self-serializers/package.json
@@ -25,7 +25,8 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-self-serializers/README.md",
   "dependencies": {
     "@shopify/react-html": "^8.1.3",
-    "@shopify/react-i18n": "^1.5.0"
+    "@shopify/react-i18n": "^1.5.0",
+    "@shopify/react-graphql": "^4.0.2"
   },
   "devDependencies": {
     "@shopify/react-testing": "^1.7.3",
