--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -2,7 +2,7 @@
   "name": "@shopify/react-server",
   "version": "0.0.0",
   "license": "MIT",
-  "description": "Utilities for adding React server-side rendering.",
+  "description": "Utilities for React server-side rendering.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
@@ -29,14 +29,13 @@
     "@shopify/react-effect": "^3.2.0",
     "@shopify/react-html": "8.1.3",
     "@shopify/react-network": "3.1.2",
-    "get-port": "^5.0.0",
-    "koa": "^2.5.0",
-    "node-mocks-http": "^1.5.8"
+    "koa": "^2.5.0"
   },
   "devDependencies": {
     "@types/koa": "^2.0.44",
     "@types/minimist": "^1.2.0",
     "@types/supertest": "^2.0.8",
+    "get-port": "^5.0.0",
     "supertest": "^4.0.2",
     "typescript": "~3.2.1"
   },
