--- a/packages/koa-react-sidecar/package.json
+++ b/packages/koa-react-sidecar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-react-sidecar",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "description": "Approachable React Server Side Rendering for non-node projects.",
   "main": "dist/index.js",
@@ -27,7 +27,7 @@
     "@shopify/network": "^1.4.1",
     "@shopify/react-effect": "^3.2.0",
     "@shopify/react-html": "8.1.3",
-    "@shopify/react-network": "3.1.2",
+    "@shopify/react-network": "^3.1.3",
     "koa": "^2.5.0",
     "node-mocks-http": "^1.5.8"
   },
