--- a/packages/react-self-serializers/package.json
+++ b/packages/react-self-serializers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-self-serializers",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "description": "A set of self-serializing providers for @shopify/react-html applications",
   "main": "dist/index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-self-serializers/README.md",
   "dependencies": {
+    "@shopify/react-graphql": "^4.0.3",
     "@shopify/react-html": "^8.1.3",
-    "@shopify/react-i18n": "^1.5.0",
-    "@shopify/react-graphql": "^4.0.2"
+    "@shopify/react-i18n": "^1.5.1"
   },
   "devDependencies": {
     "@shopify/react-testing": "^1.7.3",
