🚨 tweak shipit.gem.yml to avoid generating nonsense files

--- a/shipit.gem.yml
+++ b/shipit.gem.yml
@@ -1,6 +1,9 @@
 ci:
   require:
     - continuous-integration/travis-ci/push
+dependencies:
+  override:
+    - echo "nothing to see here"
 deploy:
   max_commits: 200
   override:
