--- a/packages/react-self-serializers/package.json
+++ b/packages/react-self-serializers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-self-serializers",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "description": "A set of self-serializing providers for @shopify/react-html applications",
   "main": "dist/index.js",
@@ -30,10 +30,10 @@
     "typescript": "~3.2.1"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
     "@shopify/react-graphql": ">=4.0.3",
     "@shopify/react-html": ">=2.0.0",
-    "@shopify/react-i18n": ">=1.2.3"
+    "@shopify/react-i18n": ">=1.2.3",
+    "react": ">=16.8.0"
   },
   "files": [
     "dist/*"
