--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -27,7 +27,9 @@
     "@shopify/async": "^2.0.0",
     "@shopify/react-async": "^3.0.2",
     "@shopify/react-hooks": "^1.2.1",
+    "@shopify/react-network": "^3.1.3",
     "@shopify/useful-types": "^1.3.0",
+    "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.0",
     "apollo-link-http": "^1.5.15",
     "graphql-typed": "^0.4.0",
