--- a/packages/react-self-serializers/package.json
+++ b/packages/react-self-serializers/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-self-serializers/README.md",
   "devDependencies": {
+    "@shopify/react-graphql": "^4.0.3",
+    "@shopify/react-html": "^8.1.3",
+    "@shopify/react-i18n": "^1.5.1",
     "@shopify/react-testing": "^1.7.3",
     "@types/faker": "4.1.5",
     "faker": "^4.1.0",
