--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "react-dom": "16.9.0-alpha.0",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.10.4",
-    "tslib": "^1.9.3",
-    "typescript": "~3.2.1"
+    "tslib": "^1.9.3",	
+    "typescript": "~3.2.1",
+    "ts-jest": "^23.10.4"
   },
   "dependencies": {},
   "resolutions": {
