--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,32 @@
+shared:
+  node_container: &node_container
+    language: node_js
+    node_js:
+      - 8.10.0
+    before_install:
+      - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.17.3
+      - export PATH="$HOME/.yarn/bin:$PATH"
+    install:
+      - yarn install --production=false --frozen-lockfile
+    cache: yarn
+
 matrix:
   include:
-    - language: node_js
-      before_install:
-        - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.10.1
-        - export PATH="$HOME/.yarn/bin:$PATH"
-      install:
-        - yarn install --production=false
+    - <<: *node_container
+      name: 'Node - build, type-check, and end-to-end tests'
+      script:
+        - yarn build
+        - yarn test --testPathPattern react-server-webpack-plugin
+    - <<: *node_container
+      name: 'Node - unit tests'
+      script:
+        - yarn test --testPathIgnorePatterns react-server-webpack-plugin
+        - yarn codecov
+    - <<: *node_container
+      name: 'Node - lint'
       script:
         - yarn lint
         - yarn ci:lint-docs
-        - yarn build
-        - yarn test
-        - yarn codecov
-      cache: yarn
     - language: ruby
       before_install:
         - cd gems/quilt_rails
