--- a/gems/quilt_rails/Rakefile
+++ b/gems/quilt_rails/Rakefile
@@ -10,6 +10,8 @@ end
 
 Bundler::GemHelper.install_tasks
 
+require File.expand_path('../test/dummy/config/application', __FILE__)
+
 require 'rake/testtask'
 
 Rake::TestTask.new do |t|
