--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -27,7 +27,9 @@
     "@shopify/react-hydrate": "^1.1.2",
     "@shopify/react-serialize": "^1.0.15",
     "@shopify/useful-types": "^2.0.0",
-    "tslib": "^1.9.3"
+    "tslib": "^1.9.3",
+    "@types/multistream": "^2.1.1",
+    "multistream": "^2.1.1"
   },
   "peerDependencies": {
     "react": "^16.3.2",
