--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "9.0.6",
+  "version": "9.1.0",
   "license": "MIT",
   "description": "A component to render your react app with no static HTML.",
   "main": "dist/index.js",
@@ -27,9 +27,9 @@
     "@shopify/react-hydrate": "^1.1.2",
     "@shopify/react-serialize": "^1.0.15",
     "@shopify/useful-types": "^2.0.0",
-    "tslib": "^1.9.3",
     "@types/multistream": "^2.1.1",
-    "multistream": "^2.1.1"
+    "multistream": "^2.1.1",
+    "tslib": "^1.9.3"
   },
   "peerDependencies": {
     "react": "^16.3.2",
