--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -33,7 +33,7 @@
     "apollo-client": "^2.6.0",
     "apollo-link-http": "^1.5.15",
     "graphql-typed": "^0.4.0",
-    "react-apollo": ">=2.2.3 <3.0.0"
+    "react-apollo": "^2.2.3"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.0",
