--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -30,10 +30,10 @@
     "@shopify/react-network": "^3.1.7",
     "@shopify/useful-types": "^2.0.0",
     "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.3.8",
+    "apollo-client": "^2.6.0",
     "apollo-link-http": "^1.5.15",
     "graphql-typed": "^0.4.0",
-    "react-apollo": "^2.2.3"
+    "react-apollo": ">=2.2.3 <3.0.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.0",
