--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "lerna run build",
     "lint": "yarn eslint '**/*.{ts,tsx}'",
     "ci:lint-docs": "yarn generate docs && test -z \"$(git status --porcelain)\" || echo 'The root README has not been updated. Run `yarn generate docs` in the root of your quilt directory and try again.'",
-    "test": "jest --maxWorkers=3 --coverage=false",
+    "test": "NODE_ICU_DATA=node_modules/full-icu jest --maxWorkers=3 --coverage=false",
     "check": "lerna run check",
     "release": "lerna publish",
     "clean": "rimraf './packages/*/dist/**/*.{js,d.ts}'",
@@ -47,6 +47,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-shopify": "30.0.1",
     "faker": "^4.1.0",
+    "full-icu": "^1.3.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.0",
     "isomorphic-fetch": "^2.2.1",
