update the dependency range because I am a dummy and didnt do it right the first time around

--- a/packages/react-app-bridge-universal-provider/package.json
+++ b/packages/react-app-bridge-universal-provider/package.json
@@ -28,7 +28,7 @@
     "@shopify/react-html": ">=8.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
     "@shopify/react-effect": "^3.2.1",
