--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-graphql-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-graphql": "^5.0.9",
-    "@shopify/react-hooks": "^1.2.1",
+    "@shopify/react-graphql": ">=5.0.0",
+    "@shopify/react-hooks": ">=1.1.0",
     "@shopify/react-html": ">=8.0.0"
   },
   "peerDependencies": {
