--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.5.5",
     "@shopify/app-bridge": "^0.7.3",
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/faker": "^4.1.5",
-    "@types/jest": "^23.3.5",
+    "@types/jest": "^24.0.18",
     "@types/react": "16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/react-helmet": "^5.0.6",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
+    "babel-jest": "^24.9.0",
+    "babel-preset-shopify": "^20.0.0",
     "codecov": "^3.0.2",
     "create-shopify": "0.4.26",
     "element-closest": "^3.0.1",
@@ -50,7 +53,7 @@
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.0",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^23.6.0",
+    "jest": "^24.9.0",
     "jest-enzyme": "^7.0.1",
     "jest-transform-graphql": "^2.1.0",
     "lerna": "^2.9.0",
