--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "check": "lerna run check",
     "release": "lerna publish",
     "clean": "rimraf './packages/*/dist/**/*.{js,d.ts}'",
-    "generate": "yarn plop",
-    "tophat": "node ./bin/tophat.js"
+    "generate": "yarn plop"
   },
   "repository": {
     "type": "git",
@@ -41,6 +40,7 @@
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
     "codecov": "^3.0.2",
+    "create-shopify": "0.4.25",
     "element-closest": "^3.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -61,9 +61,9 @@
     "react-dom": "16.9.0-alpha.0",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
+    "ts-jest": "^23.10.4",
     "tslib": "^1.9.3",
-    "typescript": "~3.2.1",
-    "ts-jest": "^23.10.4"
+    "typescript": "~3.2.1"
   },
   "dependencies": {},
   "resolutions": {
