--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -25,10 +25,10 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-router/README.md",
   "dependencies": {
     "@shopify/react-network": "^3.2.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "@types/react-router-dom": "^4.3.5"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^4.3.5",
     "typescript": "~3.2.1"
   },
   "files": [
