--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-router",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "description": "A universal router for React.",
   "main": "dist/index.js",
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-router/README.md",
   "dependencies": {
     "@shopify/react-network": "^3.2.0",
-    "react-router-dom": "^5.0.1",
-    "@types/react-router-dom": "^4.3.5"
+    "@types/react-router-dom": "^4.3.5",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "~3.2.1"
