--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -28,6 +28,7 @@
     "@shopify/react-async": "^3.0.6",
     "@shopify/react-effect": "^3.2.2",
     "@shopify/react-html": "^9.2.2",
+    "@shopify/react-hydrate": "^1.1.3",
     "@shopify/react-network": "^3.2.1",
     "@shopify/sewing-kit-koa": "^6.1.1",
     "chalk": "^2.4.2",
