--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,13 @@
 {
   "lerna": "2.9.0",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
   "commands": {
     "publish": {
-      "skipNpm": true
+      "skipNpm": true,
+      "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"]
     }
   }
 }
