--- a/packages/koa-shopify-graphql-proxy/package.json
+++ b/packages/koa-shopify-graphql-proxy/package.json
@@ -26,8 +26,6 @@
     "koa-better-http-proxy": "^0.2.4",
     "tslib": "^1.9.3"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "sideEffects": false
 }
