--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -32,9 +32,7 @@
     "@shopify/react-intersection-observer": "^2.0.4",
     "@shopify/useful-types": "^2.0.0"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "files": [
     "dist/*"
   ]
