--- a/packages/react-csrf/package.json
+++ b/packages/react-csrf/package.json
@@ -27,8 +27,7 @@
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^1.7.7",
-    "typescript": "~3.2.1"
+    "@shopify/react-testing": "^1.7.7"
   },
   "files": [
     "dist/*"
