--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -43,8 +43,7 @@
     "get-port": "^5.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "supertest": "^4.0.2",
-    "typescript": "~3.2.1"
+    "supertest": "^4.0.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0",
