--- a/packages/useful-types/package.json
+++ b/packages/useful-types/package.json
@@ -25,9 +25,7 @@
   "dependencies": {
     "tslib": "^1.9.3"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "files": [
     "dist/*"
   ]
