--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -23,9 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/address/README.md",
   "devDependencies": {
-    "@shopify/address-mocks": "^1.2.22",
-    "@shopify/jest-dom-mocks": "^2.7.5",
-    "typescript": "~3.2.1"
+    "@shopify/address-mocks": "^1.2.20",
+    "@shopify/jest-dom-mocks": "^2.7.3"
   },
   "sideEffects": false,
   "dependencies": {
