--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -29,8 +29,7 @@
     "@babel/types": "^7.3.0",
     "@types/babel__core": "^7.0.4",
     "@types/babel__traverse": "^7.0.5",
-    "@types/webpack": "^4.4.24",
-    "typescript": "~3.2.1"
+    "@types/webpack": "^4.4.24"
   },
   "files": [
     "dist/*",
