--- a/packages/css-utilities/package.json
+++ b/packages/css-utilities/package.json
@@ -27,9 +27,7 @@
     "@types/classnames": "^2.2.7",
     "classnames": "^2.2.6"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "files": [
     "dist/*"
   ]
