--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -29,8 +29,7 @@
     "koa-compose": ">=3.0.0 <4.0.0"
   },
   "devDependencies": {
-    "@shopify/sewing-kit-koa": "^6.1.1",
-    "typescript": "~3.2.1"
+    "@shopify/sewing-kit-koa": "^6.1.1"
   },
   "files": [
     "dist/*",
