--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -29,8 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
-    "@types/koa": "^2.0.44",
-    "typescript": "~3.2.1"
+    "@types/koa": "^2.0.44"
   },
   "sideEffects": false
 }
