--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -32,8 +32,7 @@
     "apollo-client": "^2.3.8",
     "react": "^16.8.1",
     "react-apollo": "^2.2.3",
-    "react-dom": "^16.8.1",
-    "typescript": "~3.2.1"
+    "react-dom": "^16.8.1"
   },
   "peerDependencies": {
     "apollo-cache-inmemory": "^1.3.6",
