--- a/packages/koa-liveness-ping/package.json
+++ b/packages/koa-liveness-ping/package.json
@@ -27,8 +27,7 @@
     "@types/koa": "^2.0.44",
     "@types/koa-mount": "^3.0.1",
     "koa": "^2.5.0",
-    "koa-mount": "^3.0.0",
-    "typescript": "~3.2.1"
+    "koa-mount": "^3.0.0"
   },
   "sideEffects": false,
   "dependencies": {
