--- a/packages/koa-shopify-webhooks/package.json
+++ b/packages/koa-shopify-webhooks/package.json
@@ -32,8 +32,7 @@
   },
   "devDependencies": {
     "@types/koa-bodyparser": "^4.2.1",
-    "@types/koa-compose": "^3.2.2",
-    "typescript": "~3.2.1"
+    "@types/koa-compose": "^3.2.2"
   },
   "files": [
     "dist/*"
