--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -28,8 +28,6 @@
     "pretty-ms": "^3.2.0",
     "tslib": "^1.9.3"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "sideEffects": false
 }
