--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -31,8 +31,7 @@
     "react": "^16.3.2"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.10",
-    "typescript": "~3.2.1"
+    "@types/enzyme": "^3.1.10"
   },
   "sideEffects": false
 }
