--- a/packages/react-effect-apollo/package.json
+++ b/packages/react-effect-apollo/package.json
@@ -27,8 +27,7 @@
     "@shopify/react-effect": "^3.2.2"
   },
   "devDependencies": {
-    "react-apollo": "^2.2.3",
-    "typescript": "~3.2.1"
+    "react-apollo": "^2.2.3"
   },
   "files": [
     "dist/*"
