--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -27,8 +27,7 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@types/react-dom": "^16.0.11",
-    "typescript": "~3.2.1"
+    "@types/react-dom": "^16.0.11"
   },
   "files": [
     "dist/*",
