--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -33,8 +33,7 @@
   "devDependencies": {
     "@shopify/enzyme-utilities": "^2.1.3",
     "@types/enzyme": "^3.1.10",
-    "faker": "^4.1.0",
-    "typescript": "~3.2.1"
+    "faker": "^4.1.0"
   },
   "sideEffects": false
 }
