--- a/packages/react-form/package.json
+++ b/packages/react-form/package.json
@@ -29,8 +29,7 @@
   "devDependencies": {
     "@shopify/react-testing": "^1.7.7",
     "@types/faker": "^4.1.5",
-    "faker": "^4.1.0",
-    "typescript": "~3.2.1"
+    "faker": "^4.1.0"
   },
   "files": [
     "dist/*"
