--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -36,8 +36,7 @@
     "@shopify/react-testing": "^1.7.5",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
-    "apollo-link": "^1.2.3",
-    "typescript": "~3.2.1"
+    "apollo-link": "^1.2.3"
   },
   "files": [
     "dist/*"
