--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -36,8 +36,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "@shopify/with-env": "^1.1.0",
-    "typescript": "~3.2.1"
+    "@shopify/with-env": "^1.1.0"
   },
   "sideEffects": false
 }
