--- a/packages/react-hydrate/package.json
+++ b/packages/react-hydrate/package.json
@@ -27,9 +27,7 @@
     "@shopify/react-effect": "^3.2.2",
     "@shopify/react-hooks": "^1.2.2"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "peerDependencies": {
     "react": "^16.8.0"
   },
