--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -26,9 +26,7 @@
   "dependencies": {
     "@shopify/async": "^2.0.3"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "peerDependencies": {
     "react": "^16.8.0"
   },
