--- a/packages/react-preconnect/package.json
+++ b/packages/react-preconnect/package.json
@@ -26,9 +26,7 @@
     "react-helmet": "^5.2.0",
     "tslib": "^1.9.3"
   },
-  "devDependencies": {
-    "typescript": "~3.2.1"
-  },
+  "devDependencies": {},
   "peerDependencies": {
     "react": "^16.3.2"
   },
