--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -29,7 +29,7 @@
     "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "~3.2.1"
+    "@types/react-router-dom": "^4.3.5"
   },
   "files": [
     "dist/*"
