--- a/packages/react-self-serializers/package.json
+++ b/packages/react-self-serializers/package.json
@@ -30,8 +30,7 @@
     "@shopify/react-i18n": "^1.8.1",
     "@shopify/react-testing": "^1.7.7",
     "@types/faker": "4.1.5",
-    "faker": "^4.1.0",
-    "typescript": "~3.2.1"
+    "faker": "^4.1.0"
   },
   "peerDependencies": {
     "@shopify/app-bridge-react": ">=1.5.0",
