--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -31,8 +31,7 @@
   },
   "devDependencies": {
     "@shopify/react-testing": "^1.7.7",
-    "faker": "^4.1.0",
-    "typescript": "~3.2.1"
+    "faker": "^4.1.0"
   },
   "files": [
     "dist/*"
