--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -27,7 +27,7 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/types": "^7.3.0",
-    "@types/babel__core": "^7.0.4",
+    "@types/babel__core": "7.0.4",
     "@types/babel__traverse": "^7.0.5",
     "@types/webpack": "^4.4.24"
   },
