--- a/packages/react-server-webpack-plugin/tsconfig.json
+++ b/packages/react-server-webpack-plugin/tsconfig.json
@@ -11,6 +11,6 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/*/templates/**/*"],
   "references": [{"path": "../react-testing"}]
 }
