--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/ast-utilities",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "description": "Utilities for working with Abstract Syntax Trees (ASTs)",
   "main": "dist/index.js",
@@ -23,16 +23,17 @@
     "url": "https://github.com/shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/ast-utilities/README.md",
-  "dependencies": {},
   "devDependencies": {
-    "typescript": "~3.2.1",
     "@babel/core": "7.5.5",
+    "@babel/plugin-transform-react-jsx": "7.3.0",
+    "@babel/plugin-transform-typescript": "7.5.5",
     "@babel/traverse": "7.5.5",
     "@babel/types": "7.5.5",
     "@types/babel__core": "7.1.2",
     "@types/babel__traverse": "^7.0.7",
-    "@babel/plugin-transform-typescript": "7.5.5",
-    "@babel/plugin-transform-react-jsx": "7.3.0"
+    "typescript": "~3.2.1"
   },
-  "files": ["dist/*"]
+  "files": [
+    "dist/*"
+  ]
 }
