Add DefaultProviders to webpack generated App component (#985)
* Adds DefaultProviders

* fix build errors

* docs

--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -31,6 +31,7 @@
     "@shopify/react-hydrate": "^1.1.4",
     "@shopify/react-network": "^3.2.2",
     "@shopify/sewing-kit-koa": "^6.1.2",
+    "@shopify/react-csrf-universal-provider": "^1.0.4",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
     "koa-compose": "^4.1.0",
