--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/ast-utilities",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "description": "Utilities for working with Abstract Syntax Trees (ASTs)",
   "main": "dist/index.js",
@@ -31,8 +31,8 @@
     "@babel/types": "7.5.5",
     "@types/babel__core": "7.1.2",
     "@types/babel__traverse": "^7.0.7",
-    "typescript": "~3.2.1",
-    "@types/unist": "^2.0.3"
+    "@types/unist": "^2.0.3",
+    "typescript": "~3.2.1"
   },
   "files": [
     "dist/*"
