--- a/packages/react-server-webpack-plugin/tsconfig.build.json
+++ b/packages/react-server-webpack-plugin/tsconfig.build.json
@@ -11,5 +11,5 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/*/templates/**/*"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
 }
