--- a/packages/polyfills/tsconfig.json
+++ b/packages/polyfills/tsconfig.json
@@ -11,5 +11,6 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "references": [{"path": "../useful-types"}]
 }
