--- a/packages/with-env/tsconfig.json
+++ b/packages/with-env/tsconfig.json
@@ -1,15 +1,10 @@
 {
   "extends": "../tsconfig_base.json",
-  "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./src",
     "rootDir": "./src"
   },
-  "include": [
-    "../../config/typescript/**/*",
-    "./src/**/*.ts",
-    "./src/**/*.tsx"
-  ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "include": ["./src/**/*.ts"],
+  "exclude": ["**/*.test.ts"]
 }
