--- a/packages/react-cookie/package.json
+++ b/packages/react-cookie/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@shopify/react-network",
-  "version": "3.2.2",
+  "name": "@shopify/react-cookie",
+  "version": "0.0.0",
   "license": "MIT",
-  "description": "A collection of components that allow you to set common HTTP headers from within your React application.",
+  "description": "Cookies in React for the server and client",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
@@ -22,20 +22,21 @@
   "bugs": {
     "url": "https://github.com/shopify/quilt/issues"
   },
-  "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-network/README.md",
+  "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-cookie/README.md",
   "dependencies": {
-    "@shopify/network": "^1.4.2",
     "@shopify/react-effect": "^3.2.3",
-    "@types/accept-language-parser": "1.5.0",
-    "@types/cookie": "^0.3.3",
-    "@types/koa": "^2.0.46",
-    "accept-language-parser": "1.5.0",
+    "@shopify/react-hooks": "^1.2.1",
+    "@shopify/react-html": "^9.0.5",
+    "@shopify/react-network": "^3.1.3",
     "cookie": "^0.4.0",
     "tslib": "^1.9.3"
   },
-  "files": [
-    "dist/*",
-    "server.js",
-    "server.d.ts"
-  ]
+  "peerDependencies": {
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  },
+  "devDependencies": {
+    "typescript": "~3.2.1"
+  },
+  "files": ["dist/*"]
 }
