--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@shopify/enzyme-utilities": "^2.1.4",
-    "@types/enzyme": "^3.1.10",
+    "@shopify/useful-types": "^1.3.0",
     "faker": "^4.1.0"
   },
   "sideEffects": false
