--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.18",
+    "@types/puppeteer": "^1.20.0",
     "@types/react": "16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/react-helmet": "^5.0.6",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
     "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-shopify": "^20.0.0",
     "codecov": "^3.0.2",
     "create-shopify": "0.4.26",
@@ -52,6 +54,7 @@
     "eslint-plugin-shopify": "30.0.1",
     "faker": "^4.1.0",
     "full-icu": "^1.3.0",
+    "get-port": "^5.0.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.0",
     "isomorphic-fetch": "^2.2.1",
@@ -61,6 +64,7 @@
     "lerna": "^2.9.0",
     "plop": "^2.0.0",
     "prettier": "^1.14.0",
+    "puppeteer": "^1.20.0",
     "react": "16.9.0-alpha.0",
     "react-apollo": "^2.2.3",
     "react-dom": "16.9.0-alpha.0",
