--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@shopify/react-server-webpack-plugin",
-  "version": "2.2.2",
+  "name": "@shopify/web-worker",
+  "version": "0.0.0",
   "license": "MIT",
-  "description": "A webpack plugin that generates entrypoints for @shopify/react-server based applications",
+  "description": "Tools for making web workers fun to use.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
@@ -22,17 +22,22 @@
   "bugs": {
     "url": "https://github.com/shopify/quilt/issues"
   },
-  "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server-webpack-plugin/README.md",
+  "homepage": "https://github.com/Shopify/quilt/blob/master/packages/web-workers/README.md",
   "dependencies": {
-    "@shopify/ast-utilities": "^0.0.3",
+    "@babel/types": "^7.0.0",
+    "@types/babel__core": "^7.0.0",
+    "@types/babel__traverse": "^7.0.0",
+    "@types/webpack": "^4.0.0",
     "webpack-virtual-modules": "^0.1.12"
   },
   "devDependencies": {
-    "@shopify/react-server": "^0.7.3",
-    "@types/webpack-virtual-modules": "^0.1.0",
-    "webpack": "^4.39.1"
+    "@types/webpack-virtual-modules": "^0.1.0"
   },
   "files": [
     "dist/*"
-  ]
+  ],
+  "optionalDependencies": {
+    "@babel/core": "^7.0.0",
+    "webpack": "^4.40.0"
+  }
 }
