Support modern react-apollo (#1087)

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,6 @@
       "esnext.asynciterable"
     ]
   },
-  "include": ["./**/*.ts", "./**/*.tsx"],
+  "include": ["./config/typescript/**/*.d.ts", "./**/*.ts", "./**/*.tsx"],
   "exclude": ["./node_modules"]
 }
