--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -31,8 +31,7 @@
     "@babel/types": "7.5.5",
     "@types/babel__core": "7.1.2",
     "@types/babel__traverse": "^7.0.7",
-    "@types/unist": "^2.0.3",
-    "typescript": "~3.2.1"
+    "@types/unist": "^2.0.3"
   },
   "files": [
     "dist/*"
