--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lemonmade/web-worker",
-  "version": "0.0.2-beta.0",
+  "version": "0.0.2-beta.1",
   "license": "MIT",
   "description": "Tools for making web workers fun to use.",
   "main": "dist/index.js",
@@ -33,7 +33,9 @@
     "@types/webpack-virtual-modules": "^0.1.0"
   },
   "files": [
-    "dist/*"
+    "dist/*",
+    "./*.js",
+    "./*.d.ts"
   ],
   "optionalDependencies": {
     "@babel/core": "^7.0.0",
