--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/async/README.md",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/types": "^7.3.0",
-    "@types/babel__core": "7.0.4",
-    "@types/babel__traverse": "^7.0.5",
+    "@babel/core": ">=7.0.0",
+    "@babel/plugin-syntax-dynamic-import": ">=7.0.0",
+    "@babel/types": ">=7.0.0",
+    "@types/babel__core": ">=7.0.0",
+    "@types/babel__traverse": ">=7.0.0",
     "@types/webpack": "^4.0.0"
   },
   "files": [
