Fix no-extraneous-dependencies: Take 2 (#1064)
* fix extraneous imports

* final fixes

--- a/packages/address-mocks/package.json
+++ b/packages/address-mocks/package.json
@@ -28,6 +28,7 @@
   },
   "sideEffects": false,
   "dependencies": {
+    "@shopify/jest-dom-mocks": "^2.0.2",
     "@shopify/address-consts": "^1.0.1",
     "tslib": "^1.9.3"
   }
