--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/dates/README.md",
   "dependencies": {
     "@shopify/decorators": "^1.1.5",
+    "@shopify/function-enhancers": "^1.0.5",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
