--- a/packages/enzyme-utilities/package.json
+++ b/packages/enzyme-utilities/package.json
@@ -28,6 +28,7 @@
   },
   "sideEffects": false,
   "peerDependencies": {
+    "enzyme": "^3.10.0",
     "react": ">=16.8.0 <17.0.0",
     "react-dom": ">=16.8.0 <17.0.0"
   }
