--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -29,9 +29,12 @@
     "@shopify/react-hooks": "^1.2.3",
     "@shopify/react-network": "^3.3.1",
     "@shopify/useful-types": "^2.0.1",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.0",
-    "apollo-link-http": "^1.5.15",
+    "@shopify/react-effect": "^3.2.0",
+    "@shopify/react-idle": "^1.0.1",
+    "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
+    "apollo-client": ">=2.0.0 <3.0.0",
+    "apollo-link": ">=1.0.0 <2.0.0",
+    "apollo-link-http": ">=1.0.0 <2.0.0",
     "graphql-typed": "^0.4.0",
     "react-apollo": ">=2.2.3 <4.0.0"
   },
