--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -28,6 +28,8 @@
     "webpack-virtual-modules": "^0.1.12"
   },
   "devDependencies": {
+    "koa-mount": "^3.0.0",
+    "@types/koa-mount": "^3.0.1",
     "@babel/types": ">=7.0.0",
     "@types/babel__core": ">=7.0.0",
     "@types/babel__traverse": ">=7.0.0",
