--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "codecov": "^3.0.2",
     "create-shopify": "0.4.26",
     "element-closest": "^3.0.1",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-plugin-shopify": "30.0.1",
     "faker": "^4.1.0",
@@ -57,6 +57,7 @@
     "get-port": "^5.0.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.0",
+    "intl-pluralrules": "^0.2.1",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.0.1",
