--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -27,8 +27,6 @@
     "@babel/core": ">=7.0.0",
     "@babel/plugin-transform-react-jsx": ">=7.0.0",
     "@babel/plugin-transform-typescript": ">=7.0.0",
-    "@babel/traverse": ">=7.0.0",
-    "@babel/types": ">=7.0.0",
     "@types/babel__core": ">=7.0.0",
     "@types/babel__traverse": ">=7.0.0",
     "@types/unist": "^2.0.3"
@@ -37,9 +35,13 @@
     "dist/*"
   ],
   "dependencies": {
+    "@babel/traverse": ">=7.0.0",
+    "@babel/types": ">=7.0.0",
+    "@babel/template": "^7.6.0",
     "remark-parse": "^7.0.1",
     "remark-stringify": "^7.0.3",
     "unified": "^8.4.0",
-    "unist-builder": "^1.0.4"
+    "unist-builder": "^1.0.4",
+    "jest-matcher-utils": "^24.9.0"
   }
 }
