--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -29,6 +29,7 @@
     "@babel/types": ">=7.0.0",
     "@types/babel__core": ">=7.0.0",
     "@types/babel__traverse": ">=7.0.0",
+    "@babel/traverse": ">=7.0.0",
     "@types/webpack": "^4.0.0"
   },
   "files": [
