--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
+    "@types/koa": "^2.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
     "koa-bodyparser": ">=4.0.0 <5.0.0",
     "koa-compose": ">=3.0.0 <4.0.0"
@@ -40,5 +41,8 @@
   ],
   "optionalDependencies": {
     "@shopify/sewing-kit-koa": "*"
+  },
+  "peerDependencies": {
+    "koa": ">=2.0.0"
   }
 }
