--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -27,14 +27,15 @@
     "@shopify/network": "^1.4.2",
     "@shopify/performance": "^1.2.1",
     "@shopify/statsd": "^1.1.0",
+    "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
     "change-case": "^3.1.0",
     "koa-bodyparser": ">=4.0.0 <5.0.0",
     "koa-compose": ">=3.0.0 <4.0.0"
   },
-  "peer-dependencies": {
-    "koa": ">=2.0.0 <3.0.0"
+  "peerDependencies": {
+    "koa": ">=2.0.0"
   },
   "devDependencies": {
     "@shopify/with-env": "^1.1.1"
