--- a/packages/koa-shopify-webhooks/package.json
+++ b/packages/koa-shopify-webhooks/package.json
@@ -26,13 +26,17 @@
   "dependencies": {
     "@shopify/network": "^1.4.2",
     "koa-bodyparser": "^4.2.1",
-    "koa-compose": "^4.1.0",
+    "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0",
-    "safe-compare": "^1.1.3"
+    "safe-compare": "^1.1.3",
+    "@types/koa": "^2.0.0"
   },
   "devDependencies": {
     "@types/koa-bodyparser": "^4.2.1",
-    "@types/koa-compose": "^3.2.2"
+    "@types/koa-compose": "*"
+  },
+  "peerDependencies": {
+    "koa": ">=2.0.0"
   },
   "files": [
     "dist/*"
