--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -35,6 +35,7 @@
     "server.d.ts"
   ],
   "peerDependencies": {
-    "react": ">=16.0.0"
+    "react": ">=16.8.0 <17.0.0",
+    "react-dom": ">=16.8.0 <17.0.0"
   }
 }
