--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -22,6 +22,9 @@
   "bugs": {
     "url": "https://github.com/shopify/quilt/issues"
   },
+  "peerDependencies": {
+    "react": ">=16.8.0 <17.0.0"
+  },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-hooks/README.md",
   "files": [
     "dist/*"
