--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -29,7 +29,8 @@
     "@shopify/useful-types": "^2.0.1",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
-    "tslib": "^1.9.3"
+    "tslib": "^1.9.3",
+    "serialize-javascript": "^1.5.0"
   },
   "peerDependencies": {
     "react": "^16.3.2",
