--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -25,14 +25,14 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-i18n-universal-provider/README.md",
   "dependencies": {
     "@shopify/react-html": "^9.2.3",
-    "@shopify/react-i18n": "^2.1.1"
+    "@shopify/react-i18n": "^2.1.1",
+    "@shopify/react-hooks": "^1.2.3"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
     "@shopify/react-effect": "^3.2.3",
-    "@shopify/react-testing": "^1.8.0",
     "faker": "^4.1.0"
   },
   "files": [
