--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -26,12 +26,12 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/types": "^7.3.0",
-    "@types/babel__core": "^7.0.4",
-    "@types/babel__template": "^7.0.1",
-    "@types/babel__traverse": "^7.0.5",
     "@types/glob": "^7.1.1",
-    "intl-pluralrules": "^0.2.1"
+    "@types/babel__core": "^7.0.4",
+    "intl-pluralrules": "^0.2.1",
+    "@babel/types": ">=7.0.0",
+    "@types/babel__template": "^7.0.0",
+    "@types/babel__traverse": "^7.0.0"
   },
   "dependencies": {
     "@shopify/dates": "^0.2.3",
@@ -51,6 +51,10 @@
   "sideEffects": false,
   "peerDependencies": {
     "react": "^16.0.0"
+  },
+  "optionalDependencies": {
+    "@babel/template": "^7.0.0",
+    "@babel/traverse": "^7.0.0"
   },
   "files": [
     "dist/*",
