--- a/packages/react-intersection-observer/package.json
+++ b/packages/react-intersection-observer/package.json
@@ -25,5 +25,8 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-intersection-observer/README.md",
   "files": [
     "dist/*"
-  ]
+  ],
+  "peerDependencies": {
+    "react": ">=16.8.0 <17.0.0"
+  }
 }
