--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -33,14 +33,16 @@
     "@shopify/react-hydrate": "^1.1.4",
     "@shopify/react-network": "^3.3.1",
     "@shopify/sewing-kit-koa": "^6.1.2",
+    "@shopify/useful-types": "^1.3.0",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
-    "koa-compose": "^4.1.0",
+    "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0"
-  },
+   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.1.5",
-    "@types/koa": "^2.0.44",
+    "@shopify/with-env": "^1.1.1",
+    "@types/koa": "^2.0.0",
     "@types/supertest": "^2.0.8",
     "get-port": "^5.0.0",
     "react": "^16.8.1",
@@ -49,7 +51,8 @@
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0",
-    "react-dom": ">=16.8.0 <17.0.0"
+    "react-dom": ">=16.8.0 <17.0.0",
+    "isomorphic-fetch": ">=2.0.0"
   },
   "files": [
     "dist/*"
