--- a/packages/react-shortcuts/package.json
+++ b/packages/react-shortcuts/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-shortcuts/README.md",
   "peerDependencies": {
-    "react": "^16.3.2"
+    "react": ">=16.8.0 <17.0.0"
   },
   "dependencies": {
     "tslib": "^1.9.3"
