--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@shopify/app-bridge": "^0.7.3",
+    "@shopify/tophat": "^0.0.3",
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/faker": "^4.1.5",
@@ -74,12 +75,7 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
     "tslib": "^1.9.3",
-<<<<<<< HEAD
-    "typescript": "~3.2.1",
-    "@shopify/tophat": "^0.0.3"
-=======
     "typescript": "^3.6.2"
->>>>>>> Migrate codebase to use Typescript project references & incremental builds
   },
   "dependencies": {},
   "resolutions": {
