--- a/packages/react-web-worker/tsconfig.json
+++ b/packages/react-web-worker/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig_base.json",
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist",
@@ -7,5 +7,6 @@
     "rootDir": "./src"
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "references": [{"path": "../web-worker"}]
 }
