--- a/packages/web-worker/tsconfig.json
+++ b/packages/web-worker/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig_base.json",
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist",
