--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -23,6 +23,7 @@
     "@shopify/react-hooks": "^1.3.0",
     "@shopify/react-html": "^9.2.8",
     "@shopify/react-intersection-observer": "^2.0.9",
+    "@shopify/useful-types": "^2.1.0",
     "tslib": "^1.9.3"
   },
   "peerDependencies": {
