--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-validate-fixtures",
   "description": "Validates JSON fixtures for GraphQL responses against the associated operations and schema",
-  "version": "0.11.3",
+  "version": "0.11.4",
   "main": "lib/index.js",
   "license": "MIT",
   "publishConfig": {
@@ -32,9 +32,9 @@
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
     "graphql": "^14.0.0",
+    "graphql-config": "^2.2.1",
     "graphql-config-utilities": "^1.0.0",
     "graphql-tool-utilities": "^1.1.0",
-    "yargs": "^11.0.0",
-    "graphql-config": "^2.2.1"
+    "yargs": "^11.0.0"
   }
 }
