Extract RPC part of web worker library and squash some bugs (#1166)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,5 @@
   "prettier.eslintIntegration": true,
   "eslint.validate": ["typescript", "typescriptreact"],
   "javascript.implicitProjectConfig.experimentalDecorators": true,
-  "cSpell.ignoreWords": [
-    "transferables"
-  ]
+  "cSpell.ignoreWords": ["transferables"]
 }
