--- a/packages/react-i18n-webpack-plugin/package.json
+++ b/packages/react-i18n-webpack-plugin/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.0-remove-babel-beta.5",
   "license": "MIT",
   "description": "A webpack plugin that automatically filled in &#x60;@shopify/react-i18n&#x60;&#x27;s &#x60;useI18n&#x60;s or &#x60;withI18n&#x60;s call arguments.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "sideEffects": false,
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
-    "build": "tsc --p tsconfig.build.json",
-    "prepublishOnly": "yarn run build"
+    "build": "tsc --p tsconfig.json"
   },
+  "sideEffects": false,
   "publishConfig": {
     "access": "public",
     "@shopify:registry": "https://registry.npmjs.org"
