--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "1.0.26",
+  "version": "1.0.26-generate-index-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications.",
   "main": "dist/src/index.js",
@@ -25,7 +25,7 @@
   "dependencies": {
     "@shopify/react-hooks": "^1.3.2",
     "@shopify/react-html": "^9.2.10",
-    "@shopify/react-i18n": "^2.1.9"
+    "@shopify/react-i18n": "^2.1.9-generate-index-beta.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
