--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -42,6 +42,8 @@
     "@types/hoist-non-react-statics": "^3.0.1",
     "change-case": "^3.1.0",
     "glob": "^7.1.4",
+    "lodash.clonedeep": "^4.0.0",
+    "lodash.merge": "^4.0.0",
     "hoist-non-react-statics": "^3.0.1",
     "prop-types": "^15.6.2",
     "string-hash": "^1.1.3",
@@ -61,6 +63,8 @@
     "babel.d.ts",
     "babel.js",
     "generate-index.d.ts",
-    "generate-index.js"
+    "generate-index.js",
+    "generate-dictionaries.d.ts",
+    "generate-dictionaries.js"
   ]
 }
