--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "yarn tsc --build packages",
     "lint": "eslint '**/*.{ts,tsx}'",
     "ci:lint-docs": "yarn generate docs && test -z \"$(git status --porcelain)\" || echo 'The root README has not been updated. Run `yarn generate docs` in the root of your quilt directory and try again.'",
-    "pretest": "yarn run build",
-    "test": "NODE_ICU_DATA=node_modules/full-icu jest --maxWorkers=3 --coverage=false",
+    "_test": "NODE_ICU_DATA=node_modules/full-icu jest",
+    "pretest": "yarn build",
+    "test": "yarn _test --no-coverage",
+    "test:ci": "yarn _test --maxWorkers=3 --coverage",
     "check": "lerna run check",
     "release": "lerna publish",
     "clean": "rimraf './packages/*/dist'",
