Fix missing react-html entry point

--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -38,6 +38,8 @@
   "sideEffects": false,
   "files": [
     "dist/*",
-    "!tsconfig.tsbuildinfo"
+    "!tsconfig.tsbuildinfo",
+    "server.js",
+    "server.d.ts"
   ]
 }
